force-app/main/default/objects/Contact/fields/SDR__c.field-meta.xml
<CustomField>
    <fullName>SDR__c</fullName>
    <label>SDR</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amrita Sen</fullName>
            </value>
            <value>
                <fullName>Arvind</fullName>
                <label>Arvind Tripathy</label>
            </value>
            <value>
                <fullName>Belinda Trevor</fullName>
            </value>
            <value>
                <fullName>Christina Blanco</fullName>
            </value>
            <value>
                <fullName>Kainaz Dara Patel</fullName>
            </value>
            <value>
                <fullName>Krishna Chaitanya</fullName>
            </value>
            <value>
                <fullName>Matt P</fullName>
            </value>
            <value>
                <fullName>Nick_Garcia</fullName>
                <label>Nick Garcia</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Sherdah_Moca</fullName>
                <label>Sherdah Moca</label>
            </value>
            <value>
                <fullName>Shiva_Kumar_Gatla</fullName>
                <isActive>false</isActive>
                <label>Shiva Kumar Gatla</label>
            </value>
            <value>
                <fullName>Venkatesh T</fullName>
                <isActive>false</isActive>
                <label>Venkatesh T</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>