force-app/main/default/objects/Contact/fields/Success_Package__c.field-meta.xml
<CustomField>
    <fullName>Success_Package__c</fullName>
    <inlineHelpText>This field is used in the Website - Plans - Request a Quote Form.</inlineHelpText>
    <label>Success Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Success_Package</valueSetName>
    </valueSet>
</CustomField>