force-app/main/default/objects/Contact/fields/Suggested_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Record_Owner__c</fullName>
    <formula>CASESAFEID(IF(Account.SDR_Owner__r.IsActive = true &amp;&amp; NOT(ISBLANK(Account.SDR_Owner__c)),  Account.SDR_Owner__c,
IF(Account.Owner.IsActive = true &amp;&amp; NOT(ISBLANK(Account.OwnerId)), Account.OwnerId,
&apos;0050K00000BQdcGQAT&apos;)))</formula>
    <label>Suggested Record Owner</label>
    <type>Text</type>
</CustomField>