force-app/main/default/objects/Contact/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <description>Used to tag people for later tracking/reporting</description>
    <inlineHelpText>Used to tag people for later tracking/reporting</inlineHelpText>
    <label>Tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tags</valueSetName>
    </valueSet>
</CustomField>