force-app/main/default/objects/Contact/fields/Title_Score__c.field-meta.xml
<CustomField>
    <fullName>Title_Score__c</fullName>
    <inlineHelpText>Use this field to mark the score for the Contact Title.</inlineHelpText>
    <label>Title Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Copper</fullName>
            </value>
            <value>
                <fullName>Tin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>