force-app/main/default/objects/Contact/fields/Wrong_Owner__c.field-meta.xml
<CustomField>
    <fullName>Wrong_Owner__c</fullName>
    <formula>(OwnerId &lt;&gt; BLANKVALUE( Account.SDR_Owner__c , Account.OwnerId)) &amp;&amp; (LEFT(OwnerId, 3)=&quot;005&quot;)</formula>
    <label>Wrong Owner</label>
    <type>Checkbox</type>
</CustomField>