force-app/main/default/objects/Contact/fields/X2_Subscriber_Status_In__c.field-meta.xml
<CustomField>
    <fullName>X2_Subscriber_Status_In__c</fullName>
    <description>Created for reporting purposes. Date Contact, Contact Status moved into &quot;2-Subscriber&quot;.</description>
    <inlineHelpText>Date Contact, Contact Status moved into &quot;2-Subscriber&quot;.</inlineHelpText>
    <label>2-Subscriber Status In</label>
    <type>DateTime</type>
</CustomField>