force-app/main/default/objects/Contact/fields/X3_Prospect_Status_Out__c.field-meta.xml
<CustomField>
    <fullName>X3_Prospect_Status_Out__c</fullName>
    <description>Created for reporting purposes. Date Contact, Contact Status moved out of &quot;3-Prospect&quot;.</description>
    <inlineHelpText>Date Contact, Contact Status moved out of &quot;3-Prospect&quot;.</inlineHelpText>
    <label>3-Prospect Status Out</label>
    <type>DateTime</type>
</CustomField>