force-app/main/default/objects/Contact/fields/X4_MQL_Status_In__c.field-meta.xml
<CustomField>
    <fullName>X4_MQL_Status_In__c</fullName>
    <description>Created for reporting purposes. Date Contact, Contact Status moved into &quot;4-MQL&quot;.</description>
    <inlineHelpText>Date Contact, Contact Status moved into &quot;4-MQL&quot;.</inlineHelpText>
    <label>4-MQL Status In</label>
    <type>DateTime</type>
</CustomField>