force-app/main/default/objects/Contact/fields/X4_MQL_Status_Out__c.field-meta.xml
<CustomField>
    <fullName>X4_MQL_Status_Out__c</fullName>
    <description>Created for reporting purposes. Date Contact, Contact Status moved out of &quot;4-MQL&quot;.</description>
    <inlineHelpText>Date Contact, Contact Status moved out of &quot;4-MQL&quot;.</inlineHelpText>
    <label>4-MQL Status Out</label>
    <type>DateTime</type>
</CustomField>