force-app/main/default/objects/Contact/fields/X5_Intro_Call_Scheduled_Status_In__c.field-meta.xml
<CustomField>
    <fullName>X5_Intro_Call_Scheduled_Status_In__c</fullName>
    <description>Created for reporting purposes. Date Contact, Contact Status moved into &quot;5-Intro Call Scheduled&quot;</description>
    <inlineHelpText>Date Contact, Contact Status moved into &quot;5-Intro Call Scheduled&quot;</inlineHelpText>
    <label>5-Intro Call Scheduled Status In</label>
    <type>DateTime</type>
</CustomField>