force-app/main/default/objects/Contact/fields/X6_Intro_Call_Held_Status_In__c.field-meta.xml
<CustomField>
    <fullName>X6_Intro_Call_Held_Status_In__c</fullName>
    <description>Created for reporting purposes. Date Contact, Contact Status moved out of &quot;6-Intro Call Held&quot;.</description>
    <inlineHelpText>Date Contact, Contact Status moved into &quot;6-Intro Call Held&quot;.</inlineHelpText>
    <label>6-Intro Call Held Status In</label>
    <type>DateTime</type>
</CustomField>