force-app/main/default/objects/Contact/fields/ZoomInfo_Email__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Email__c</fullName>
    <description>We use this field to overwrite the email id every time we enrich the record with ZoomInfo.</description>
    <label>ZoomInfo Email</label>
    <type>Email</type>
</CustomField>