force-app/main/default/objects/Contact/fields/ZoomInfo_URL__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_URL__c</fullName>
    <description>URL to the person&apos;s ZoomInfo profile</description>
    <label>ZoomInfo URL</label>
    <type>Url</type>
</CustomField>