force-app/main/default/objects/Contact/listViews/All_Contacts_List.listView-meta.xml
<ListView>
    <fullName>All_Contacts_List</fullName>
    <columns>PARENT.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
    <columns>ACCOUNT.OWNER.FIRST_NAME</columns>
    <columns>Account.SDR_Owner__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.ACCOUNT_SOURCE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>dtipp</value>
    </filters>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>3/15/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Allianz (nether</value>
    </filters>
    <label>All Contacts List</label>
    <sharedTo>
        <group>Queue_Manager</group>
    </sharedTo>
</ListView>