force-app/main/default/objects/Contact/listViews/ContactsToDelete.listView-meta.xml
<ListView>
    <fullName>ContactsToDelete</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Contact_Status__c</columns>
    <columns>Contact_Type__c</columns>
    <columns>Contact_Stage__c</columns>
    <columns>Lost_Reason__c</columns>
    <columns>CONTACT.ADDRESS2_STATE_CODE</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Stage__c</field>
        <operation>equals</operation>
        <value>Lost</value>
    </filters>
    <filters>
        <field>Lost_Reason__c</field>
        <operation>equals</operation>
        <value>Delete from CRM</value>
    </filters>
    <label>#ContactsToDelete</label>
    <sharedTo>
        <group>Market_Analysts_Group</group>
        <group>Queue_Manager</group>
    </sharedTo>
</ListView>