force-app/main/default/objects/Contact/listViews/CPQ_Pre_Launch_popup.listView-meta.xml
<ListView>
    <fullName>CPQ_Pre_Launch_popup</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.EMAIL_OPT_OUT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Type__c</columns>
    <columns>Account.ABM_Key_Account_Current__c</columns>
    <columns>Account.ABM_Key_Account_Current_Date__c</columns>
    <columns>Contact_Rating__c</columns>
    <columns>Contact_Status__c</columns>
    <columns>Contact_Stage__c</columns>
    <columns>Lost_Reason__c</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Sequence_Name__c</field>
        <operation>equals</operation>
        <value>,None</value>
    </filters>
    <label>#CPQ Pre-Launch popup</label>
    <sharedTo>
        <role>General_and_Administrative</role>
        <role>Inbound_SDR</role>
        <role>Marketing_Manager</role>
    </sharedTo>
</ListView>