force-app/main/default/objects/Contact/listViews/Europe_Customer_Contacts.listView-meta.xml
<ListView>
    <fullName>Europe_Customer_Contacts</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Navneeth,Sundeep</value>
    </filters>
    <label>Europe Customer Contacts</label>
    <language>en_US</language>
    <sharedTo></sharedTo>
</ListView>