force-app/main/default/objects/Contact/listViews/Event_Contact_Assignment.listView-meta.xml
<ListView>
    <fullName>Event_Contact_Assignment</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>#Event Contact Assignment</label>
    <sharedTo>
        <group>Queue_Manager</group>
    </sharedTo>
</ListView>