force-app/main/default/objects/Contact/listViews/Inactive_Contact_Owner_Hot_Warm_Leads.listView-meta.xml
<ListView>
    <fullName>Inactive_Contact_Owner_Hot_Warm_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Contact_Rating__c</columns>
    <columns>Contact_Type__c</columns>
    <columns>Contact_Status__c</columns>
    <columns>Contact_Stage__c</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
    <columns>pi__conversion_object_name__c</columns>
    <columns>pi__campaign__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>pi__last_activity__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Rating__c</field>
        <operation>equals</operation>
        <value>Hot,Warm</value>
    </filters>
    <filters>
        <field>Owner_Status__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>#Inactive Contact Owner Hot&amp;Warm Leads</label>
    <sharedTo>
        <group>Market_Analysts_Group</group>
        <group>Queue_Manager</group>
    </sharedTo>
</ListView>