force-app/main/default/objects/Contact/listViews/Inbound_Contact_Queue.listView-meta.xml
<ListView>
    <fullName>Inbound_Contact_Queue</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Contact_Rating__c</columns>
    <columns>Contact_Status__c</columns>
    <columns>Contact_Type__c</columns>
    <columns>Contact_Stage__c</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>pi__last_activity__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Christina</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Kori</value>
    </filters>
    <label>#Inbound Contact Queue</label>
    <sharedTo>
        <group>Market_Analysts_Group</group>
        <group>Queue_Manager</group>
    </sharedTo>
</ListView>