force-app/main/default/objects/Contact/listViews/Title_Score_Needed.listView-meta.xml
<ListView>
    <fullName>Title_Score_Needed</fullName>
    <columns>Title_Category_Score__c</columns>
    <columns>Title_Category__c</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Industry__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Title_Category_Score__c</field>
        <operation>notEqual</operation>
        <value>Gold,Silver,Bronze,Copper,Tin</value>
    </filters>
    <label>#Title Category Score Needed</label>
</ListView>