force-app/main/default/objects/Contact/listViews/X13_My_Terminus_Contacts.listView-meta.xml
<ListView>
    <fullName>X13_My_Terminus_Contacts</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>Account.terminus_mktg__EngagingOn__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Type__c</columns>
    <columns>Current_Sequence_Name__c</columns>
    <columns>Contact_Rating__c</columns>
    <columns>X2_Subscriber_Status_In__c</columns>
    <columns>pi__campaign__c</columns>
    <columns>CONTACT.LEAD_SOURCE</columns>
    <columns>ACCOUNT.ACCOUNT_SOURCE</columns>
    <columns>Contact_Status__c</columns>
    <columns>CONTACT.EMAIL_OPT_OUT</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Contact_Stage__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>CONTACT.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Terminus</value>
    </filters>
    <filters>
        <field>ACCOUNT.ACCOUNT_SOURCE</field>
        <operation>equals</operation>
        <value>Terminus</value>
    </filters>
    <filters>
        <field>Current_Sequence_Name__c</field>
        <operation>notContain</operation>
        <value>2022 Terminus/G2/ZI</value>
    </filters>
    <label>14. My Terminus Surging Contacts</label>
</ListView>